<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RosterPlanner</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name"> Username</string>
    <string name="password"> Password</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_home_fragment">HomeFragment</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="pick_date">Date</string>
    <string name="pick_time">Time </string>
    <string name="reminder">Reminder</string>


    <string-array name="reminder_array">
        <item>1 hour before</item>
        <item>12 hours before</item>
        <item>1 day before</item>
        <item>1 week before</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_event">CreateEventActivity</string>
</resources>
