<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="com.iceice.rosterplannermobileapplication.CreateEventActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/event_name"
            android:singleLine="true"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Event Name"
        />

        <EditText
            android:id="@+id/location"
            android:singleLine="true"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Location"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/from"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/date_from"
                android:editable="false"
                android:layout_weight="2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="Date"
                android:gravity="center"/>

            <Button
                android:id="@+id/date_from_btn"
                android:layout_weight="4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/pick_date"
                android:onClick="showDatePickerDialog"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <EditText
            android:id="@+id/time_from"
            android:editable="false"
            android:layout_weight="2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="Time"
            android:gravity="center"/>

        <Button
            android:id="@+id/time_from_btn"
            android:layout_weight="4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pick_time"
            android:onClick="showTimePickerDialog"
            />

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/date_to"
                android:editable="false"
                android:layout_weight="2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="Date"
                android:gravity="center"/>

            <Button
                android:id="@+id/date_to_btn"
                android:layout_weight="4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/pick_date"
                android:onClick="showDatePickerDialog2"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/time_to"
                android:editable="false"
                android:layout_weight="2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="Time"
                android:gravity="center"/>

            <Button
                android:id="@+id/time_to_btn"
                android:layout_weight="4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/pick_time"
                android:onClick="showTimePickerDialog2"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox_id"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:text="@string/reminder" />

            <Spinner
                android:id="@+id/reminder_spinner"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="Description"
            />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
